dao-voting/target/debug/build/eyre-47025963f0471529/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/sophiedankel/Development/sway-applications/dao-voting/target/debug/build/eyre-47025963f0471529/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
